--- a/src/app/edit-contact-dup/edit-contact-dup.component.html
+++ b/src/app/edit-contact-dup/edit-contact-dup.component.html
@@ -5,7 +5,7 @@
 				Edit Contacts</h4>
 			<div class="addBtn">
 				 <button class="btn btn-primary" (click)="addNotes(this.contact_id)"  style="float: right;"> Activities</button>
-			 </div> 
+			 </div>
 			<!-- <p>Contact</p> -->
 
 		</div>
@@ -16,11 +16,11 @@
 					Edit Contacts</h4>
 				<div class="addBtn">
 					 <button class="btn btn-primary" (click)="addNotes(this.contact_id)"  style="float: right;"> Activities</button>
-				 </div> 
+				 </div>
 			</div>
 			</div> -->
 			<form [formGroup]="editContact" (ngSubmit)="updateContact(this.contact_id)" *ngIf="alladmin">
-	
+
 			<!-- <div class="row">
 				<div class="col-12 col-md-7">
 					<div class="card">
@@ -54,22 +54,25 @@
 											<input type="text" id="dup_title"  class="form-control" formControlName="mobile" >
 										</div>
 									</div> -->
-	
-	
+
+
 								<!-- </div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>  -->
-	
-	
+
+
 			<div class="row">
 				<div class="col-12 col-md-12 col-lg-12">
 					<div class="card">
 						<div class="card-header">
-							<h4>Add Contacts</h4>
+							<h4>Edit Contacts</h4>
+              <p>Created Date:<strong>{{ this.created_time }}</strong></p>&nbsp;&nbsp;&nbsp;
+              <p>Modified Date:<strong>{{ this.modified_time}}</strong></p>
 						</div>
+
 						<div class="card-body p-0">
 							<div class="form-panel">
 								<div class="row">
@@ -79,15 +82,15 @@
 											<input type="text"  id="dup_contact_owner" value="{{contact_owner}}" class="form-control" formControlName="contact_owner" >
 										</div>
 									</div>
-	
+
 									<div class="col-md-6">
 										<div class="form-group">
 											<label for="lead_source">Civility</label>
-	
+
 											<input type="text"  id="dup_lead_source" class="form-control" formControlName="lead_source" >
 										</div>
 									</div>
-	
+
 									<div class="col-md-6">
 										<div class="form-group">
 											<label for="contact_owner">First Name</label>
@@ -103,14 +106,14 @@
 											</div>
 										</div>
 									</div>
-									
+
 									<div class="col-md-6">
 										<div class="form-group">
 											<label for="last_name">Last Name</label>
 											<input type="text"  id="dup_mailing_province" class="form-control" formControlName="mailing_province" >
 										</div>
 									</div>
-	
+
 									<div class="col-md-6">
 										<div class="form-group">
 											<label for="email">Email Address</label>
@@ -135,9 +138,9 @@
 											<label for="department">Gender</label>
 											<select name="departments" id="dup_departments" class="form-control">
 												<option value='0'> Select Gender </option>
-												<option value="Male">Male</option> 
-												<option value="Female">Female</option> 
-												<option value=" ">Others </option> 
+												<option value="Male">Male</option>
+												<option value="Female">Female</option>
+												<option value=" ">Others </option>
 												<!-- <option *ngFor="let dept of departments" value="{{dept.dept_id}}">{{dept.department_name}}</option> -->
 											</select>
 										</div>
@@ -148,7 +151,7 @@
 											<input type="text"id="dup_phone"  class="form-control" formControlName="phone" >
 										</div>
 									</div>
-									
+
 									<div class="col-md-6">
 										<div class="form-group">
 											<label for="mobile">Other Phone #</label>
@@ -156,9 +159,9 @@
 											<label class="error-message message-small" *ngIf="!editContact.get('mobile').valid && editContact.get('mobile').touched ">Please enter the number</label>
 										</div>
 									</div>
-	
-									
-	
+
+
+
 									<div class="col-md-6" >
 										<div class="form-group">
 											<label for="department">Nationality</label>
@@ -393,67 +396,67 @@
 											</select>
 										</div>
 									</div>
-	
+
 									<div class="col-md-6">
 										<div class="form-group">
 											<div class="input-group">
-												
-	
+
+
 											<label for="phone">staff</label>
 											<input type="text"id="dup_home_phone"  class="form-control" formControlName="home_phone" >
 												<!-- <span class="input-group-addon">
 														<input type="text" id="dup_country_code"  class="form-control" formControlName="country_code" >
 												</span>
 											<input type="text" id="dup_phone"  class="form-control" formControlName="phone" > -->
-	
+
 											 </div>
 											<!-- <p>When adding an extension, the country code is not important</p> -->
-											 
-												 
+
+
 										</div>
 									</div>
-	
+
 									<div class="col-md-6">
 										<div class="form-group">
 											<label for="home_phone">Customer Type</label>
 											<input type="text"id="dup_home_phone"  class="form-control" formControlName="home_phone" >
 										</div>
 									</div>
-	
-									
-	
+
+
+
 									<div class="col-md-6">
 										<div class="form-group">
 											<label for="fax">Account Officer</label>
 											<input type="text"id="dup_fax"  class="form-control" formControlName="fax" >
 										</div>
 									</div>
-	
+
 									<div class="col-md-6">
 										<div class="form-group">
 											<label for="assistant">Branch ID</label>
 											<input type="text" id="dup_assistant" class="form-control" formControlName="assistant" >
 										</div>
 									</div>
-	
-	
-									
-	
-	
+
+
+
+
+
 									<div class="col-md-6">
 										<div class="form-group">
 											<label for="reports_to">Bio status</label>
 											<input type="text" id="dup_reports_to" class="form-control" formControlName="reports_to" >
 										</div>
 									</div>
-	
+
 									<div class="col-md-6">
 										<div class="form-group">
 											<label for="assitant_phone">Bio flag</label>
 											<input type="text" id="dup_assitant_phone" class="form-control" formControlName="assitant_phone" >
 										</div>
 									</div>
-	
+
 									<div class="col-md-6">
 										<div class="form-group">
 											<label for="created_by">WOF</label>
@@ -461,14 +464,14 @@
 											<!-- <div class="small">{{ this.created_time }}</div> -->
 										</div>
 									</div>
-	
+
 									<div class="col-md-6">
 										<div class="form-group">
 											<label for="email_opt">Blacklisted</label>
 											<input type="text"  id="mailing_city" class="form-control" formControlName="mailing_city" >
 										</div>
 									</div>
-	
+
 									<div class="col-md-6">
 										<div class="form-group">
 											<label for="modified_by">BVN</label>
@@ -476,28 +479,28 @@
 											<!-- <div class="small">{{ this.modified_time }}</div> -->
 										</div>
 									</div>
-	
+
 									<div class="col-md-6">
 										<div class="form-group">
 											<label for="skype">Legal Info</label>
 											<input type="text"id="dup_skype"  class="form-control" formControlName="skype" >
 										</div>
 									</div>
-	
+
 									<div class="col-md-6">
 										<div class="form-group">
 											<label for="secondary_email">Legal ID Type</label>
 											<input type="text"id="dup_secondary_email"  class="form-control" formControlName="secondary_email" >
 										</div>
 									</div>
-	
+
 									<div class="col-md-6">
 										<div class="form-group">
 											<label for="twitter">Legal ID Number</label>
 											<input type="text"id="dup_twitter"  class="form-control" formControlName="twitter" >
 										</div>
 									</div>
-	
+
 									<div class="col-md-6">
 										<div class="form-group">
 											<label for="twitter">Expiry Date</label>
@@ -508,7 +511,7 @@
 											<div class="form-group">
 												<label for="twitter">Agence</label>
 												<input type="text" id="dup_twitter"  class="form-control" formControlName="twitter" >
-		
+
 											</div>
 										</div>
 										<div class="col-md-6">
@@ -523,8 +526,8 @@
 					</div>
 				</div>
 			</div>
-	
-	
+
+
 			<!-- <div class="row">
 				<div class="col-12 col-md-12 col-lg-12">
 					<div class="card">
@@ -611,8 +614,8 @@
 								<div class="row">
 									<div class="col-md-6">
 										<div class="form-group">
-											
-											
+
+
 											<label for="whatsapp_number"> <img class="mb-1 float-left" style="margin-right: 5px; width: 25px;" src="assets/img/mc-dashboard/whatsapp.webp" alt="WhatsApp"> Whatsapp Number</label>
 											<input type="text"  id="dup_whatsapp_number" class="form-control" formControlName="whatsapp_number" >
 										</div>
@@ -693,7 +696,7 @@
 											color: #34395e;">Call Recording</h5>
 											<div class="row">
 												<div class="col-md-6 contact-play-div">
-													<a class="play-record"><i class="fa fa-play-circle"></i></a> 
+													<a class="play-record"><i class="fa fa-play-circle"></i></a>
 													<p>call-rec-001.mp3</p>
 												</div>
 											</div>
@@ -711,60 +714,60 @@
 			</div> -->
 	</form>
 		</div>
-	
-	
-	
+
+
+
 	<div class="card" *ngIf="dailyfood">
 		<div class="card-header" *ngIf="this.has_external_contact == '0'">
 			<h4>Has DSK Access</h4>
-		</div>  
+		</div>
 		<div class="card-header" *ngIf="this.has_external_contact == '1'">
 			<h4>Contact</h4>
-		</div> 
-		<div class="card-body p-0" *ngIf="this.has_external_contact == '0'"> 
+		</div>
+		<div class="card-body p-0" *ngIf="this.has_external_contact == '0'">
 			<iframe [src]="this.dailyfoodurl | safe" id="dup_dailyfIframe" class="dailyfIfram" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
 		</div>
-		<div class="card-body p-0" *ngIf="this.has_external_contact == '1'"> 
+		<div class="card-body p-0" *ngIf="this.has_external_contact == '1'">
 			<div id="dup_dailyfIframes">
-				
+
 			</div>
 		</div>
 	</div>
-	
+
 	<div class="settingSidebar">
 		<a href="javascript:void(0)" class="settingPanelToggle" (click)="toggleClass()">
 			<span title="Add Wrapup Code" class="plus-icon"><i class="fas fa-plus" style="margin: 0px;"></i></span>
 			<span class="minus-icon"><i class="fas fa-minus" style="margin: 0px;"></i></span>
 		</a>
-	
+
 		<div class="settingSidebar-body ps-container ps-theme-default">
 			<form>
 				<div class=" fade show active">
 					<button *ngIf="this.no_contact==true" class="btn btn-primary" (click)="AddContact()"
 						style="float: right;margin: 9px 20px 0px 0px;"> Add Contact</button>
-	
+
 					<div class="setting-panel-header">Wrapup Code
-	
-	
+
+
 					</div>
 					<div class="p-15">
-	
+
 						<div class="row">
 							<!-- <div class="col-md-12" *ngFor="let item of questions">
 							   <div class="form-group">
 								   <label for="department">Question</label>
 								   <p>{{item.question}}</p>
-							   </div>	
+							   </div>
 						   </div> -->
 						   <div class="col-md-12">
 						   <div class="form-group">
 							<label for="type applicant">TYPE APPELLANT</label>
 							<select name="type_applicant" id="dup_type_applicant" class="form-control">
 								<option value='0'> Select APPELLANT </option>
-								<option value="client">client</option> 
-								<option value="Correspondant">Correspondant</option> 
-								<option value="Prospect">Prospect</option> 
-								<option value="Autres">Autres</option> 
+								<option value="client">client</option>
+								<option value="Correspondant">Correspondant</option>
+								<option value="Prospect">Prospect</option>
+								<option value="Autres">Autres</option>
 								<!-- <option *ngFor="let dept of departments" value="{{dept.dept_id}}">{{dept.department_name}}</option> -->
 							</select>
 						</div>
@@ -792,7 +795,7 @@
 							<div class="col-md-12">
 								<div class="form-group">
 									<label for="notes">Notes <i class="far fa-edit"></i></label>
-									<textarea id="dup_notes" class="form-control"></textarea>
+									<textarea id="dup_notes" class="form-control" ></textarea>
 								</div>
 							</div>
 							<div class="col-md-12">
@@ -807,7 +810,7 @@
 					</div>
 				</div>
 			</form>
-	
+
 			<div class="dialer-call-action">
 				<div class="row">
 					<!-- <div class="col-md-12" *ngIf="show_ans">
@@ -848,31 +851,31 @@
 					</div>
 				</div>
 			</div>
-	
-	
+
+
 		</div>
-	
+
 	</div>
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	<!-- 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	<!--
 	<div class="modal fade bd-example-modal-md" id="dup_add_pbxform">
 		<div class="modal-dialog modal-md">
 			<div class="modal-content">
@@ -889,7 +892,7 @@
 								<div class="form-group">
 									<label for="department">Question</label>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-								</div>	
+								</div>
 							</div>
 							<div class="col-md-12">
 								<div class="form-group">
@@ -898,7 +901,7 @@
 										<option value='0'> Select Wrap Up Code </option>
 										<option *ngFor="let auxcode of auxcodes" value="{{auxcode.auxcode_name}}">{{auxcode.auxcode_name}}</option>
 									  </select>
-								</div>	
+								</div>
 							</div>
 							<div class="col-md-12">
 								<div class="form-group">
